JS feito até a parte onde o objeto vai ser adicionado a lista, as condições para que todos os campos sejam preenchidos também foram adicionadas.

--- a/rev.html
+++ b/rev.html
@@ -11,7 +11,7 @@
         <br/>
         <input type="numero" placeholder="Altura" id="altu">
         <br/>
-        <input type="text" placeholder="Sexo" id="sex">
+        <input type="text" placeholder="Gênero" id="gen">
         <br/>
         <input type="button" value="Adicionar" id="btnResultado">
     </form>
